fixed spacing(in class)

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 header{
   height:100px;
-  background-color: rgba(202, 201, 199, 0.219);
+  background-color: #444;
   width:100%;
   margin-bottom:30px;
 }
@@ -17,16 +17,20 @@ header>a{
 main{
   text-align: center;
   margin: 0 0 30px 0;
+  width:960px;
 }
 body > section > img:nth-of-type(2) {
-  margin:0 30px;
+  margin:0 25px;
 }
 body {
   font-family: 'Helvetica', sans-serif;
 }
 footer{
   height:6em;
-  background-color: rgb(223, 223, 213);
+  background-color: #444;
+}
+body>section:nth-of-type(1){
+  width:960px;
 }
 body>p{
   float:left;
@@ -42,4 +46,7 @@ body > section:nth-of-type(2){
 button:hover{
   background-color:black;
   color:white;
+}
+section{
+  font-style:italic;
 }
